@@ -1,4 +1,0 @@
-
-[Icon Data]
-
-_DisplayName=Personal
