@@ -1,16 +1,5 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
-[type: gettext/ini] 48x48/emblems/emblem-art.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-certified.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-cool.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-danger.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-marketing.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-money.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-multimedia.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-ohno.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-personal.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-plan.icon.in
-[type: gettext/ini] 48x48/emblems/emblem-sales.icon.in
 [type: gettext/ini] index.theme.in
 [type: gettext/ini] scalable/emblems/emblem-desktop.icon.in
 [type: gettext/ini] scalable/emblems/emblem-documents.icon.in
