@@ -1,6 +1,11 @@
 2008-06-12  Rodney Dawes  <dobey.pwns@gmail.com>
 
 	* POTFILES.in:
+	Update for removal of the rest of 48x48/emblems
+
+2008-06-12  Rodney Dawes  <dobey.pwns@gmail.com>
+
+	* POTFILES.in:
 	Update to reflect changes with emblems
 
 2008-06-11  Djihed Afifi <djihed@gmail.com> 
