@@ -1,6 +1,14 @@
+2008-06-12  Rodney Dawes  <dobey.pwns@gmail.com>
+
+	* 48x48/Makefile.am:
+	* 48x48/emblems/:
+	Remove the rest of the old emblems for now
+	We can add some back as tags under Categories when we determine what
+	a good default set of tags would be
+	
 2008-06-12  Jakub Steiner <jimmac@ximian.com>
 
-	* call-starts, call-stop: action icons by Lapo Calamandrei.
+	* call-start, call-stop: action icons by Lapo Calamandrei.
 
 2008-06-12  Rodney Dawes  <dobey.pwns@gmail.com>
 
